Doc/c-api/init_config.rst
@@ -43,6 +43,7 @@ Functions:
 * :c:func:`Py_PreInitializeFromArgs`
 * :c:func:`Py_PreInitializeFromBytesArgs`
 * :c:func:`Py_RunMain`
+* :c:func:`Py_GetArgcArgv`
 
 The preconfiguration (``PyPreConfig`` type) is stored in
 ``_PyRuntime.preconfig`` and the configuration (``PyConfig`` type) is stored in
@@ -982,6 +983,14 @@ Py_RunMain()
 See :ref:`Python Configuration <init-python-config>` for an example of
 customized Python always running in isolated mode using
 :c:func:`Py_RunMain`.
+
+
+Py_GetArgcArgv()
+----------------
+
+.. c:function:: void Py_GetArgcArgv(int *argc, wchar_t ***argv)
+
+   Get the original command line arguments, before Python modified them.
 
 
 Multi-Phase Initialization Private Provisional API
